samples/_failures_safe/1761313729_833763_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cc2c1075.c: In function ‘main’:
./samples/SAFE/__tmp_cc2c1075.c:173:5: error: expected expression at end of input
  173 |     if (len > 0 && input[len -
      |     ^~
./samples/SAFE/__tmp_cc2c1075.c:173:5: error: expected declaration or statement at end of input
